=== Opus Primus changelog.txt ===
Last revised July 4, 2013
Please note, the Opus Primus copyright can be found at the end of this file.

== Version 1.2 ==
* Released ...

= Code =
* Added display of featured image centered at full size in single standard post format view
* Added full `featured_image` method call to single view of post formats audio, chat, quote, and status
* Added `get_author_description` method in Authors class
* Added filtered `comment_form_required_field_glyph` method in Comments class
* Added many new filters - see http://opusprimus.com/under-the-page/hooks-filters/ of 'hooks-filters.txt' for a current list
* Added sanity conditional check to eliminate potential duplicate body classes
* Changed `the_post_thumbnail` to use parameters which are set in the call to `OpusPrimusImage::featured_image`
* Changed post thumbnail on pages to full size image and align to the center
* Changed comment fields into an unordered list
* Changed `meta-byline` container from `div` to `h3` (adjusted CSS as needed)
* Changed `meta-tags` container from `p` to `h3` (adjusted CSS as needed)
* Changed `opus_post_byline_details` filter to `opus_post_byline_phrase`
* Moved `featured_image` method call into `is_single` conditional in post-format loops
* Removed `featured_image` method call from post-formats link and video loops
* Removed global `$opus_image_meta`; replaced with call to `exif_data` method

= CSS =
* Added styles for comment form fields
* Added more specific selector used with .post.format-link
* Added more BNS Plugin Integration (BPI) adjustments
* Address both class and id usage for the sidebar search form
* Adjusted widths of comment form elements
* Adjusted CSS to better handle large images with captions in large full-width displays
* Sorted out the adaptive layout for screens less than 480px wide

= JavaScript =
* Added more specific selector used with .post.format-link when adding .link-symbol class

= Stanzas =